abour section change margin between items

--- a/src/app/components/about-us/about-us.component.sass
+++ b/src/app/components/about-us/about-us.component.sass
@@ -19,6 +19,7 @@
 
 
 
+
   & > .itemAboutUs
     width: 7rem
     height: 10rem
@@ -38,6 +39,8 @@
       width: 5rem
       height: 5rem
       border-radius: 50%
+      margin: 0 2rem
+
 
     & > i
       transform: skewY(8deg)
