--- a/src/app/elements/spec-content/spec-content.component.sass
+++ b/src/app/elements/spec-content/spec-content.component.sass
@@ -9,6 +9,10 @@
   grid-template-rows: auto 1fr
   gap: 8rem
   position: relative
+  @media(max-width: $bp-md-plas)
+    padding: 0
+    gap: 4rem
+    width: 100%
 
 
 .contentElement
@@ -18,23 +22,37 @@
   gap: 1rem
   justify-content: center
   align-items: center
+  @media(max-width: $bp-md-plas)
+    grid-template-columns: 1fr
 
   &:nth-child(odd) .contentPhoto
     grid-column: 3 / span 1
     grid-row: 1 / span 1
+    @media(max-width: $bp-md-plas)
+      grid-column: 1 / span 1
+      grid-row: 1 / span 1
 
   &:nth-child(odd) .contentDescription
     grid-column: 1 / span 2
     grid-row: 1 / span 1
-
+    @media(max-width: $bp-md-plas)
+      grid-column: 1 / span 1
+      grid-row: 2 / span 1
 
   &:nth-child(even) .contentPhoto
     grid-column: 1 / span 1
     grid-row: 1 / span 1
+    @media(max-width: $bp-md-plas)
+        grid-column: 1 / span 1
+        grid-row: 1 / span 1
 
   &:nth-child(even) .contentDescription
     grid-column: 2 / span 2
     grid-row: 1 / span 1
+    @media(max-width: $bp-md-plas)
+      grid-column: 1 / span 1
+      grid-row: 2 / span 1
+
 
 
 
@@ -44,6 +62,8 @@
     padding: 0 2rem
     cursor: default
     user-select: none
+    @media(max-width: $bp-md-plas)
+      padding: 0 2rem
 
     & > p
       font-size: 2rem
@@ -61,8 +81,8 @@
     display: flex
     justify-content: center
     align-items: center
-
-
+    @media(max-width: $bp-md-plas)
+      border-radius: 0
 
     & > p
       font-size: 3rem
@@ -77,6 +97,8 @@
       cursor: default
       user-select: none
       text-align: center
+      @media(max-width: $bp-md-plas)
+        font-size: 2.5rem
 
 
 
