--- a/src/app/elements/spec-content/spec-content.component.sass
+++ b/src/app/elements/spec-content/spec-content.component.sass
@@ -97,8 +97,11 @@
       cursor: default
       user-select: none
       text-align: center
+      font-weight: 600
+      letter-spacing: 4px
       @media(max-width: $bp-md-plas)
         font-size: 2.5rem
+        padding: 8rem
 
 
 
