--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -47,12 +47,16 @@ $opacitySlider: .7
   &__text
     transform: skewY(5deg)
     text-transform: uppercase
+    @media(max-width: $bp-sm)
+      width: 80%
+
 
     & > h3
       font-size: 4rem
 
       @media(max-width: $bp-sm)
         font-size: 3rem
+        text-align: center
 
     & > p
       font-size: 2.3rem
@@ -60,6 +64,7 @@ $opacitySlider: .7
 
       @media(max-width: $bp-sm)
         font-size: 1.8rem
+        text-align: center
 
     @media(max-width: $bp-lg)
       transform: skewY(0deg)
