create media from trust us elememt

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -70,9 +70,9 @@ body::before
   box-shadow: 0 0 1rem 1rem $mainColor-dark
   transition: all .2s ease-in-out
 
-  @media(max-width: $bp-sm)
-    width: 6em
-    height: 3rem
+  @media(max-width: $bp-md-plas)
+    width: 8em
+    height: 4rem
     font-size: 1.5rem
 
   &:hover
