--- a/src/app/components/trust-us/trust-us.component.sass
+++ b/src/app/components/trust-us/trust-us.component.sass
@@ -9,8 +9,13 @@
   flex-direction: column
   justify-content: center
   align-items: center
-
-
+  @media(max-width: $bp-md-plas)
+    min-height: 50vh
+    display: grid
+    grid-template-columns: 1fr
+    grid-template-rows: auto 1fr auto
+    justify-content: start
+    align-items: start
 
   & > p
     font-size: 2.5rem
@@ -19,7 +24,13 @@
     letter-spacing: 2px
     padding: 2rem 0
     color: lighten($mainColor,50)
+    @media(max-width: $bp-md-plas)
+      text-align: center
 
 
 .trustContents
   width: 100%
+  @media(max-width: $bp-md-plas)
+    justify-content: start
+    align-items: start
+
