--- a/src/app/elements/trust-us-content/trust-us-content.component.sass
+++ b/src/app/elements/trust-us-content/trust-us-content.component.sass
@@ -52,6 +52,8 @@ $nextElementSize: 1.5rem
   display: flex
   justify-content: center
   align-items: start
+  @media(max-width: $bp-md-plas)
+    width: 100%
 
 
   & > p
@@ -63,7 +65,10 @@ $nextElementSize: 1.5rem
     margin: 0 auto
     display: flex
     justify-content: center
-
+    @media(max-width: $bp-md-plas)
+      width: 100%
+      padding: 1rem
+      font-size: 1.4rem
 
 
 .indexComponent
@@ -84,5 +89,11 @@ $nextElementSize: 1.5rem
 
 .activeIndex
   background-color: $secondColor
+
+
+.wrapperButton
+    margin-top: 8rem
+
+
 
 
