--- a/src/app/components/photo/photo.component.sass
+++ b/src/app/components/photo/photo.component.sass
@@ -22,6 +22,7 @@
     height: 100%
     border-radius: 3rem
     background-size: cover
+    background-position: center
     overflow: hidden
     cursor: pointer
     position: relative
