--- a/src/app/components/mobile-navivigation/mobile-navivigation.component.html
+++ b/src/app/components/mobile-navivigation/mobile-navivigation.component.html
@@ -30,6 +30,9 @@
     }
   </div>
   <div class="buttonMobile">
-    <i class="fa-regular fa-address-card"></i>
+    <i
+      (click)="media.openContactPopup()"
+      class="fa-regular fa-address-card"
+    ></i>
   </div>
 </div>
