change email hrtef

--- a/src/app/components/popup-contact/popup-contact.component.html
+++ b/src/app/components/popup-contact/popup-contact.component.html
@@ -32,9 +32,11 @@
             </div>
             <div class="contactItem">
               <i class="fa-solid fa-envelope"></i>
-              <a class="emailSection" href="tel:+48507187527">{{
-                media.contactData.email
-              }}</a>
+              <a
+                class="emailSection"
+                href="mailto:{{ media.contactData.email }}"
+                >{{ media.contactData.email }}</a
+              >
             </div>
             <div class="contactItem">
               <i class="fa-solid fa-location-dot"></i>
