create form contact

--- a/src/app/components/popup-contact/popup-contact.component.html
+++ b/src/app/components/popup-contact/popup-contact.component.html
@@ -75,7 +75,9 @@
         >
           <p>Formularz</p>
           <!--          Sekcja to wstawienia formularzu w sekcji formularz-->
-          <div class="contactSection"></div>
+          <div class="formContent">
+            <app-form-email />
+          </div>
         </div>
       </div>
     </div>
