--- a/src/app/components/popup-contact/popup-contact.component.sass
+++ b/src/app/components/popup-contact/popup-contact.component.sass
@@ -152,6 +152,12 @@ $heightComponents: 70rem
 .closeText
   display: none
 
+.formContent
+  width: 100%
+  height: 100%
+  display: flex
+  flex-direction: column
+  align-items: center
 
 
 @keyframes openSection
