--- a/src/app/components/popup-contact/popup-contact.component.sass
+++ b/src/app/components/popup-contact/popup-contact.component.sass
@@ -41,7 +41,7 @@ $heightComponents: 70rem
     gap: 1rem
     justify-content: center
     align-items: center
-    padding: 8rem 0
+    padding: 1rem 0 8rem 0
 
 
   &::before
