--- a/src/app/elements/form-email/form-email.component.sass
+++ b/src/app/elements/form-email/form-email.component.sass
@@ -18,7 +18,10 @@
     color: $mainColor
     @media(max-width: $bp-md-plas)
       font-size: 1.2rem
-      padding: .5rem
+      left: 50%
+      transform: translateX(-50%)
+      text-align: center
+      width: 100%
 
 
   & .active
