update trust us section in mobile

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -18,7 +18,7 @@
       </p>
       <div class="createdWrapper">
         <p>create by</p>
-        <a href="https://www.wp.pl" target="_blank">rabdev.pl</a>
+        <a href="https://rabdev.pl" target="_blank">rabdev.pl</a>
       </div>
     </div>
   </div>
