--- a/src/app/components/footer/footer.component.sass
+++ b/src/app/components/footer/footer.component.sass
@@ -57,6 +57,7 @@
   display: flex
   gap: 3rem
   align-items: center
+  justify-content: center
   @media(max-width: $bp-md-plas)
     flex-direction: column
     gap: 1.5rem
