--- a/src/app/components/mobile-navivigation/mobile-navivigation.component.sass
+++ b/src/app/components/mobile-navivigation/mobile-navivigation.component.sass
@@ -41,10 +41,11 @@
   gap: 3rem
   transform: translateY(-50%)
 
-  & > i
+  & > a
     font-size: 3rem
     color: $mainColor
     cursor: pointer
+    text-decoration: none
 
     &:active
       transform: scale(.95)
