--- a/src/app/components/popup-contact/popup-contact.component.sass
+++ b/src/app/components/popup-contact/popup-contact.component.sass
@@ -1,6 +1,6 @@
 @import "variables"
 
-$heightComponents: 70rem
+$heightComponents: 65rem
 
 
 .wrapperPopUpContact
@@ -87,7 +87,7 @@ $heightComponents: 70rem
 
 .bigElemetn
     width: 100%
-    height: 80%
+    height: $heightComponents
     display: grid
     grid-template-columns: 1fr
     grid-template-rows: 0.2fr 1fr
