--- a/src/app/components/integration-component/integration-component.component.sass
+++ b/src/app/components/integration-component/integration-component.component.sass
@@ -62,6 +62,7 @@ $sizeContact: 4.5rem
     left: 50%
     transform: translateX(-50%)
     color: $mainColor
+    text-decoration: none
 
   &:hover
     height: calc($sizeContact * 2.2)
