--- a/src/app/elements/trust-us-content/trust-us-content.component.html
+++ b/src/app/elements/trust-us-content/trust-us-content.component.html
@@ -30,9 +30,9 @@
     }
   </div>
   <div class="wrapperButton">
-    <app-button-action
-      [actionButtonText]="'Zerknij'"
-      [actionButton]="'#trust-us'"
-    />
+    <!--    <app-button-action-->
+    <!--      [actionButtonText]="'Zerknij'"-->
+    <!--      [actionButton]="'#trust-us'"-->
+    <!--    />-->
   </div>
 </div>
