update form section

--- a/src/app/components/popup-contact/popup-contact.component.sass
+++ b/src/app/components/popup-contact/popup-contact.component.sass
@@ -95,6 +95,7 @@ $heightComponents: 65rem
     align-items: center
     cursor: default
     @media(max-width: $bp-md-plas)
+      height: 80%
       grid-template-rows: 1fr
       gap: .5rem
 
