add popup with politic privacy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-popap-expection />
 <app-popup-contact />
+<app-cookies />
 <app-mobile-navivigation />
 <app-integration-component />
 <app-header />
