update header description

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
         <h3>{{ text.first }}</h3>
         <p>{{ text.second }}</p>
       }
-      <a class="buttonElement" href="#">Zapytaj</a>
+      <a (click)="media.openContactPopup()" class="buttonElement">Zapytaj</a>
     </div>
   </div>
 </div>
