--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -47,6 +47,9 @@ $opacitySlider: .7
   &__text
     transform: skewY(5deg)
     text-transform: uppercase
+    display: flex
+    flex-direction: column
+    align-items: center
     @media(max-width: $bp-sm)
       width: 80%
 
