--- a/src/styles.sass
+++ b/src/styles.sass
@@ -69,6 +69,7 @@ body::before
   color: $mainColor
   box-shadow: 0 0 1rem 1rem $mainColor-dark
   transition: all .2s ease-in-out
+  cursor: pointer
 
   @media(max-width: $bp-md-plas)
     width: 8em
