update contact section and redirect 404 error

--- a/src/app/components/popup-contact/popup-contact.component.sass
+++ b/src/app/components/popup-contact/popup-contact.component.sass
@@ -28,8 +28,8 @@ $heightComponents: 65rem
   z-index: -2
   display: flex
   align-items: center
-  padding: 5rem
-  gap: 2rem
+  padding: 2rem
+  gap: 1rem
   @media(max-width: $bp-md-plas)
     width: 100%
     height: 100%
@@ -61,7 +61,7 @@ $heightComponents: 65rem
 
 .contactElement
   width: 20%
-  height: $heightComponents
+  height: 90%
   background-color: $secondColor-dark
   border-radius: 5rem
   display: flex
@@ -87,7 +87,7 @@ $heightComponents: 65rem
 
 .bigElemetn
     width: 100%
-    height: $heightComponents
+    height: 90%
     display: grid
     grid-template-columns: 1fr
     grid-template-rows: 0.2fr 1fr
@@ -100,7 +100,7 @@ $heightComponents: 65rem
       gap: .5rem
 
     & > p
-      font-size: 4rem
+      font-size: 3rem
       color: $mainColor
       font-weight: 500
       text-transform: uppercase
@@ -113,7 +113,7 @@ $heightComponents: 65rem
         animation: openSection .5s ease-in-out
         display: flex
         flex-direction: column
-        gap: 3rem
+        gap: 1rem
         @media(max-width: $bp-md-plas)
           gap: 1rem
         & > .companyName
@@ -122,7 +122,7 @@ $heightComponents: 65rem
             padding: 0
 
           & > p
-            font-size: 2.4rem
+            font-size: 2rem
             text-transform: uppercase
             letter-spacing: 2px
             color: $mainColor
@@ -144,7 +144,7 @@ $heightComponents: 65rem
 
 
             & > i
-              font-size: 4rem
+              font-size: 2.5rem
               color: $mainColor
               margin-bottom: 1rem
               @media(max-width: $bp-md-plas)
