create portfolio section with id page and create markdown parser function

--- a/src/app/elements/spec-content/spec-content.component.html
+++ b/src/app/elements/spec-content/spec-content.component.html
@@ -37,6 +37,6 @@
 
   <app-button-action
     [actionButtonText]="'Sprawdź'"
-    [actionButton]="'#Portfolio'"
+    [actionButton]="'/portfolio'"
   />
 </div>
