--- a/src/app/components/portfolio/portfolio.component.sass
+++ b/src/app/components/portfolio/portfolio.component.sass
@@ -20,6 +20,12 @@
   gap: 2rem
   padding: 3rem
 
+  @media(max-width: $bp-sm)
+    flex-direction: column
+    gap: .5rem
+    padding: 2rem
+
+
   & > h3
     font-size: 2rem
     letter-spacing: 2px
@@ -27,10 +33,14 @@
     text-transform: uppercase
     cursor: pointer
 
-
+    @media(max-width: $bp-sm)
+      font-size: 1.6rem
 
     &:hover
       color: $secondColor
+
+    @media(max-width: $bp-sm)
+      color: $textColor
 
 .activeElement
       color: $secondColor
@@ -41,3 +51,9 @@
   display: grid
   grid-template-columns: 1fr 1fr 1fr
   gap: 2rem
+
+  @media(max-width: $bp-md-plas)
+    grid-template-columns: 1fr 1fr
+
+  @media(max-width: $bp-sm)
+    grid-template-columns: 1fr
