--- a/src/app/elements/id-item-portfolio/id-item-portfolio.component.sass
+++ b/src/app/elements/id-item-portfolio/id-item-portfolio.component.sass
@@ -11,6 +11,10 @@
   display: grid
   grid-template-columns: 1fr .6fr
 
+  @media(max-width: $bp-sm)
+    grid-template-columns: 1fr
+    grid-template-rows: 1fr 1fr
+
 
 .goBack
   position: absolute
@@ -19,6 +23,10 @@
   font-size: 2rem
   cursor: pointer
   transition: all .4s ease-in-out
+  @media(max-width: $bp-sm)
+    bottom: 1rem
+    right: 1rem
+    top: auto
 
   &:hover
     color: $secondColor
@@ -32,6 +40,8 @@
   grid-template-columns: 1fr 1fr
   grid-template-rows: 1fr .3fr
   gap: 1rem
+  @media(max-width: $bp-sm)
+    grid-row: 1 / span 1
 
 
 .imageElement
@@ -63,6 +73,8 @@
   display: flex
   flex-direction: column
   align-items: center
+  @media(max-width: $bp-sm)
+    grid-row: 2 / span 1
 
   & > h4
     font-size: 2rem
@@ -70,6 +82,10 @@
     text-transform: uppercase
     font-weight: 200
     letter-spacing: 2px
+    @media(max-width: $bp-sm)
+      padding: 1rem 0
+      font-size: 1.4rem
+      font-weight: 600
 
 
 .descriptionObject
@@ -83,6 +99,8 @@
     text-transform: uppercase
     font-weight: 800
     padding: 1rem 0 0 3rem
+    @media(max-width: $bp-sm)
+      padding: 0 0 0 3rem
 
   &__info > span
     font-size: 1.4rem
@@ -90,7 +108,6 @@
     margin: 0 2rem
 
 .descriptionCon
-
   width: 100%
   height: 80vh
   display: grid
@@ -99,6 +116,9 @@
   padding: 3rem
   justify-items: center
   align-content: center
+  @media(max-width: $bp-sm)
+    height: 30vh
+    padding: 1rem 1.5rem
 
   & > h4
     font-size: 1.6rem
@@ -106,6 +126,8 @@
     font-weight: 400
     letter-spacing: 2px
     padding: 2rem 0
+    @media(max-width: $bp-sm)
+      padding: 0
 
 
 .logoCompany
@@ -117,6 +139,8 @@
   position: absolute
   bottom: 1rem
   background-color: lighten($mainColor,20%)
+  @media(max-width: $bp-sm)
+    display: none
 
 .contentElement
   width: 100%
