create description and keywords from portfolio one page

--- a/src/app/elements/id-item-portfolio/id-item-portfolio.component.html
+++ b/src/app/elements/id-item-portfolio/id-item-portfolio.component.html
@@ -1,5 +1,5 @@
 <div class="wrapperComponentItem">
-  <i (click)="goBack()" class="fa-solid fa-minimize goBack"></i>
+  <i (click)="goBack()" class="fa-solid fa-circle-xmark goBack"></i>
   <!--  Sekcja with photos -->
   <div class="photoSection">
     @for (item of dataItem.imagesProduct; track $index) {
