update mobile navigation and hide logo in id-item-portfolio

--- a/src/app/elements/id-item-portfolio/id-item-portfolio.component.html
+++ b/src/app/elements/id-item-portfolio/id-item-portfolio.component.html
@@ -30,11 +30,11 @@
       </div>
     </div>
     <!--   Section with company logo-->
-    <div
-      [style.mask-image]="
-        'url(https://' + APIAddress + dataItem.logoCompany?.url + ')'
-      "
-      class="logoCompany"
-    ></div>
+    <!--    <div-->
+    <!--      [style.mask-image]="-->
+    <!--        'url(https://' + APIAddress + dataItem.logoCompany?.url + ')'-->
+    <!--      "-->
+    <!--      class="logoCompany"-->
+    <!--    ></div>-->
   </div>
 </div>
