--- a/src/app/components/mobile-navivigation/mobile-navivigation.component.sass
+++ b/src/app/components/mobile-navivigation/mobile-navivigation.component.sass
@@ -72,19 +72,19 @@
 .navigationMobile
   position: fixed
   z-index: 1600
-  width: 60vw
-  height: 60vh
+  width: 100%
+  height: 100%
   left: 50%
   //top: 50%
   transform: translate(-50%, -50%)
-  background-color: $secondColor
+  background-color: $secondColor-dark
   display: grid
   justify-content: center
   align-items: center
   gap: 2rem
   grid-template-rows: .5fr 1fr .5fr
   flex-direction: column
-  border-radius: 5rem
+  //border-radius: 5rem
   transition: all .3s ease-in-out
 
 
@@ -100,6 +100,8 @@
     font-size: 2rem
     color: $mainColor
     text-decoration: none
+    font-weight: 500
+    letter-spacing: 2px
 
 .hidden-true
   top: 150%
@@ -122,10 +124,11 @@
 .logoFora
   width: 15rem
   height: 5rem
-  background-color: $secondColor-dark
+  background-color: $mainColor-dark
   mask-size: contain
   mask-repeat: no-repeat
   mask-position: center
+  opacity: 40%
 
 .closeNavigation
   font-size: 3rem
